--- a/html/index.html
+++ b/html/index.html
@@ -1,105 +1,62 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<html class="lockscreen">
 <head>
-<style type="text/css">
-html,body {
-	height: 100%;
-} /*高さ100%に指定*/
-.centerMiddle {
-	margin: -200px 0 0 -300px; /*縦横の半分をネガティブマージンでずらす*/
-	position: absolute; /*body要素に対して絶対配置*/
-	top: 50%; /*上端を中央に*/
-	left: 50%; /*左端を中央に*/
-	width: 600px; /*横幅*/
-	height: 400px; /*縦幅*/
-	background-color: #fff;
-}
+    <meta charset="UTF-8">
+    <title>DataManagement</title>
+    <link rel="shortcut icon" href="#" type="image/vnd.microsoft.icon">
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- Theme style -->
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 
-#mytable {
-	width: 700px;
-	margin: 0 0 0 1px;
-	padding: 0;
-	border: 0;
-	border-spacing: 0;
-	border-collapse: collapse;
-}
-
-caption {
-	padding: 0 0 5px 0;
-	font: italic 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	text-align: right;
-}
-
-th {
-	font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	color: #4f6b72;
-	border: 1px solid #c1dad7;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	text-align: left;
-	padding: 6px 6px 6px 12px;
-	background: #cae8ea url(
-				"img/css/bg_header.jpg") no-repeat;
-}
-
-th.nobg {
-	border-top: 0;
-	border-left: 0;
-	background: none;
-}
-
-td {
-	border: 1px solid #c1dad7;
-	background: #fff;
-	padding: 6px 6px 6px 12px;
-	color: #4f6b72;
-}
-
-td.alt {
-	background: #F5FAFA;
-	color: #797268;
-}
-
-th.spec {
-	background: #fff url("img/css/bullet1.gif") no-repeat;
-	font: bold 10px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-}
-
-th.specalt {
-	background: #f5fafa url("img/css/bullet2.gif") no-repeat;
-	font: bold 10px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	color: #797268;
-}
-</style>
 </head>
-<body>
-	<div class="centerMiddle">
-		<table id="mytable">
-			<caption>Data Management</caption>
-			<form id="form1" name="form1" action="#"  >
-			<tr>
-				<td class="alt"><div>user </div> <br /></td>
-				<td>
-					<input type="text" value="user" />
-				</td>
-			</tr>
-			<tr>
-				<td class="alt"><div>password </div> <br /></td>
-				<td>
-					<input type="text" value="password" />
-				</td>
-			</tr>
-			<tr>
-				<td class="alt" colspan="2" style="text-align:center"><div> </div> <br />
-					<div>
-						<input type="submit" value="login" id="goHomeBtn1"/>
-					</div>
-				</td>
-			</tr>
-			</form>
-		</table>
-		<br /> <br />
-	</div>
+
+<style type="text/css">
+    .footer{
+        background-color: #ebd3e8;
+    }
+</style>
+
+<body class="">
+<div class="form-box" id="login-box">
+    <div class="header">DataManagement(Ver1.0)</div>
+    <form action="/DataManagement/login" method="post" id="UserForm" name="UserForm" onsubmit="return checkLogin()">
+        <div class="body bg-gray">
+            <div class="form-group">
+                <input type="text" name="userid" class="form-control" placeholder="ユーザー名"/>
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" class="form-control" placeholder="パスワード"/>
+            </div>
+        </div>
+        <div class="footer">
+            <button type="submit" class="btn bg-aqua btn-block">ログイン</button>
+        </div>
+    </form>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    //loginの必須項目チェック
+    function checkLogin(){
+        var flag=0;
+        var msg=document.getElementById("errorMessage");
+        msg.innerHTML="";
+        //必須項目設定
+        if(document.UserForm.userid.value==""){flag=1;}
+        if(document.UserForm.password.value==""){flag=1;}
+
+        if(flag){
+            msg.innerHTML="ユーザ名とパスワードを両方入力ください";
+            return false;
+        }else{
+            return true;
+        }
+    }
+</script>
 </body>
 </html>
